--- a/kalpana-lesson/time_series_anomaly_lesson.ipynb
+++ b/kalpana-lesson/time_series_anomaly_lesson.ipynb
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "266c260c",
    "metadata": {},
    "outputs": [
@@ -1742,49 +1742,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2019-01-29</th>\n",
-       "      <td>44</td>\n",
-       "      <td>3.623334</td>\n",
-       "      <td>42.081344</td>\n",
-       "      <td>-34.834677</td>\n",
-       "      <td>1.024945</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2018-03-06</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1.794285</td>\n",
+       "      <td>24.718352</td>\n",
+       "      <td>-21.129782</td>\n",
+       "      <td>1.006143</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-07-08</th>\n",
-       "      <td>101</td>\n",
-       "      <td>8.248768</td>\n",
-       "      <td>96.507472</td>\n",
-       "      <td>-80.009936</td>\n",
-       "      <td>1.025451</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2018-03-10</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1.297767</td>\n",
+       "      <td>17.711866</td>\n",
+       "      <td>-15.116333</td>\n",
+       "      <td>1.008777</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-10-15</th>\n",
-       "      <td>9</td>\n",
-       "      <td>0.581421</td>\n",
-       "      <td>8.457414</td>\n",
-       "      <td>-7.294571</td>\n",
-       "      <td>1.034446</td>\n",
-       "      <td>3</td>\n",
+       "      <th>2018-03-15</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.962081</td>\n",
+       "      <td>11.839564</td>\n",
+       "      <td>-9.915402</td>\n",
+       "      <td>1.007375</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-01-09</th>\n",
+       "      <th>2018-03-19</th>\n",
        "      <td>4</td>\n",
-       "      <td>0.262470</td>\n",
-       "      <td>3.802115</td>\n",
-       "      <td>-3.277175</td>\n",
-       "      <td>1.027953</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0.282459</td>\n",
+       "      <td>3.912735</td>\n",
+       "      <td>-3.347818</td>\n",
+       "      <td>1.012019</td>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2019-04-06</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.129825</td>\n",
-       "      <td>1.889712</td>\n",
-       "      <td>-1.630061</td>\n",
-       "      <td>1.031334</td>\n",
-       "      <td>3</td>\n",
+       "      <th>2018-03-23</th>\n",
+       "      <td>36</td>\n",
+       "      <td>2.861781</td>\n",
+       "      <td>35.421547</td>\n",
+       "      <td>-29.697984</td>\n",
+       "      <td>1.008883</td>\n",
+       "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1796,49 +1796,49 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-01-24</th>\n",
-       "      <td>7</td>\n",
-       "      <td>0.574393</td>\n",
-       "      <td>6.857226</td>\n",
-       "      <td>-5.708440</td>\n",
-       "      <td>1.011362</td>\n",
-       "      <td>817</td>\n",
+       "      <th>2021-04-15</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1.870604</td>\n",
+       "      <td>19.985241</td>\n",
+       "      <td>-16.244032</td>\n",
+       "      <td>1.000407</td>\n",
+       "      <td>584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-03-25</th>\n",
-       "      <td>59</td>\n",
-       "      <td>6.824556</td>\n",
-       "      <td>58.415342</td>\n",
-       "      <td>-44.766230</td>\n",
-       "      <td>1.005666</td>\n",
-       "      <td>843</td>\n",
+       "      <th>2021-04-18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.193754</td>\n",
+       "      <td>2.821754</td>\n",
+       "      <td>-2.434245</td>\n",
+       "      <td>1.033913</td>\n",
+       "      <td>627</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-23</th>\n",
-       "      <td>67</td>\n",
-       "      <td>8.229409</td>\n",
-       "      <td>66.322904</td>\n",
-       "      <td>-49.864086</td>\n",
-       "      <td>1.005828</td>\n",
-       "      <td>851</td>\n",
+       "      <th>2021-04-20</th>\n",
+       "      <td>32</td>\n",
+       "      <td>2.064516</td>\n",
+       "      <td>30.049944</td>\n",
+       "      <td>-25.920912</td>\n",
+       "      <td>1.034841</td>\n",
+       "      <td>122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-04-06</th>\n",
-       "      <td>19</td>\n",
-       "      <td>1.348943</td>\n",
-       "      <td>18.056879</td>\n",
-       "      <td>-15.358994</td>\n",
-       "      <td>1.028224</td>\n",
-       "      <td>854</td>\n",
+       "      <th>2021-04-20</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.266919</td>\n",
+       "      <td>3.778434</td>\n",
+       "      <td>-3.244597</td>\n",
+       "      <td>1.031548</td>\n",
+       "      <td>469</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-03-25</th>\n",
-       "      <td>15</td>\n",
-       "      <td>1.021925</td>\n",
-       "      <td>14.239722</td>\n",
-       "      <td>-12.195871</td>\n",
-       "      <td>1.028760</td>\n",
-       "      <td>859</td>\n",
+       "      <th>2021-04-21</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1.802568</td>\n",
+       "      <td>23.622693</td>\n",
+       "      <td>-20.017557</td>\n",
+       "      <td>1.008646</td>\n",
+       "      <td>717</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1848,28 +1848,28 @@
       "text/plain": [
        "            pages_one_user   midband         ub         lb     pct_b  user_id\n",
        "date                                                                         \n",
-       "2019-01-29              44  3.623334  42.081344 -34.834677  1.024945        1\n",
-       "2019-07-08             101  8.248768  96.507472 -80.009936  1.025451        1\n",
-       "2018-10-15               9  0.581421   8.457414  -7.294571  1.034446        3\n",
-       "2019-01-09               4  0.262470   3.802115  -3.277175  1.027953        3\n",
-       "2019-04-06               2  0.129825   1.889712  -1.630061  1.031334        3\n",
+       "2018-03-06              25  1.794285  24.718352 -21.129782  1.006143       73\n",
+       "2018-03-10              18  1.297767  17.711866 -15.116333  1.008777       54\n",
+       "2018-03-15              12  0.962081  11.839564  -9.915402  1.007375       61\n",
+       "2018-03-19               4  0.282459   3.912735  -3.347818  1.012019       92\n",
+       "2018-03-23              36  2.861781  35.421547 -29.697984  1.008883       76\n",
        "...                    ...       ...        ...        ...       ...      ...\n",
-       "2021-01-24               7  0.574393   6.857226  -5.708440  1.011362      817\n",
-       "2021-03-25              59  6.824556  58.415342 -44.766230  1.005666      843\n",
-       "2021-02-23              67  8.229409  66.322904 -49.864086  1.005828      851\n",
-       "2021-04-06              19  1.348943  18.056879 -15.358994  1.028224      854\n",
-       "2021-03-25              15  1.021925  14.239722 -12.195871  1.028760      859\n",
+       "2021-04-15              20  1.870604  19.985241 -16.244032  1.000407      584\n",
+       "2021-04-18               3  0.193754   2.821754  -2.434245  1.033913      627\n",
+       "2021-04-20              32  2.064516  30.049944 -25.920912  1.034841      122\n",
+       "2021-04-20               4  0.266919   3.778434  -3.244597  1.031548      469\n",
+       "2021-04-21              24  1.802568  23.622693 -20.017557  1.008646      717\n",
        "\n",
        "[1060 rows x 6 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anomalies"
+    "anomalies.sort_index()"
    ]
   },
   {
